🥙 results: fix nth color issue in dark mode

--- a/static/css/core.css
+++ b/static/css/core.css
@@ -502,7 +502,7 @@ arr::before {
 	content: counter(resultsTableNth);
 	font-size: 12px;
 	font-weight: bold;
-	color: initial;
+	color: inherit;
 }
 
 .resultsScreen > thead > tr > th[key="subject"],
